<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rainwave</string>

    <!--  Time templates -->
    <string name="template_days">%dd</string>
    <string name="template_hours">%dh</string>
    <string name="template_minutes">%dm</string>
    <string name="template_seconds">%ds</string>

    <!-- Labels for UI elements. -->
    <string name="label_nowPlaying">Now Playing</string>
    <string name="label_requestQueue">Request Queue</string>
    <string name="label_playlist">Playlist</string>
    <string name="label_authentication">Authentication info</string>
    <string name="label_ui">User interface</string>
    <string name="label_debug">Debugging</string>
    <string name="label_userId">Numeric User ID</string>
    <string name="label_key">API Key</string>
    <string name="label_autoshow_elections">Elections popups</string>
    <string name="label_preferences">Preferences</string>
    <string name="label_goToPreferences">Go to preferences</string>
    <string name="label_refresh">Refresh</string>
    <string name="label_pickStation">Pick station</string>
    <string name="label_tuneIn">Tune in</string>
    <string name="label_by_album">By album</string>
    <string name="label_by_artist">By artist</string>
    <string name="label_loading">Loading…</string>
    <string name="label_album">Album</string>
    <string name="label_song">Song</string>
    <string name="label_requestor">Requested by: %s</string>
    <string name="label_rateSong">Rate song</string>
    <string name="label_remove">Remove</string>
    <string name="label_request">Request</string>
    <string name="label_login">Login</string>
    <string name="label_later">Later</string>
    <string name="label_never">Never</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_rate">Rate!</string>
    <string name="label_voted">Voted!</string>
    <string name="label_voting">Voting…</string>
    <string name="label_unrated">Unrated</string>
    <string name="label_error">Error</string>
    <string name="label_ok">OK</string>
    <string name="label_tunedin">Tuned in</string>
    <string name="label_nottunedin">Not tuned in</string>
    <string name="label_anonymous">Anonymous</string>
    <string name="label_welcome">Welcome!</string>
    <string name="label_import_qr">Import from QR code</string>
    <string name="label_clear_preferences">Clear preferences</string>

    <!-- Longer messages for dialogs, et cetera -->
    <string name="msg_new">New to Rainwave?</string>
    <string name="msg_howToRegister">You can listen to the radio right away. To vote, rate, and request
        you\'ll need a user account. Register at the main web site at <b>rainwave.cc</b> and enter your
        user ID and API key from the \'Manage API Keys\' page. </string>
    <string name="msg_import_qr">Import user ID and API key from a QR code.</string>
    <string name="msg_clear_preferences">Clear all preferences, including user ID and API key.</string>
    <string name="msg_manageAuth">From the \'Manage API Keys\' page at <b>rainwave.cc</b>.</string>
    <string name="msg_autoshow_elections">Automatically extend or hide election drawer.</string>
    <string name="msg_sessionError">Failed to initialize session. Is the Rainwave URL
        correct?</string>
    <string name="msg_requested">Your request was submitted!</string>
    <string name="msg_noRequests">You have no pending requests.</string>
    <string name="msg_nullFieldError">Please fill in all fields.</string>
    <string name="msg_albumArtError">Failed to fetch album art.</string>
    <string name="msg_tuneInFirst">Tune in first!</string>
    <string name="msg_tunedInVote">You must be tuned in to vote.</string>
    <string name="msg_invalidUrl">Unsure of how to handle URI. Parts may have been omitted.</string>
    <string name="msgfmt_parseError">"For endpoint %1$s: could not parse response from backend: %2$s"</string>
    <string name="msg_filterAlbum">Filter by album…</string>
    <string name="msg_filterArtist">Filter by artist…</string>
    <string name="msg_streamNotKnown">Stream URL is not known!</string>
    <string name="msg_genericError">Operation failed.</string>
    <string name="msg_noStations">The server did not report any stations.</string>
    <string name="msg_authenticationFailure">Authentication failure; please check your user ID and key.</string>
    <string name="msg_noUserInfo">Could not find user information in URL.</string>
    <string name="msg_eventUpdateFailure">Could not fetch an event update.</string>
    <string name="msg_forbidden">The server forbid the request. Has your key been invalidated?</string>
</resources>