<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="rainwave" >

    <PreferenceCategory
        android:key="pref_auth"
        android:title="@string/label_authentication" >

        <EditTextPreference
            android:dialogTitle="@string/label_userId"
            android:inputType="phone"
            android:key="pref_userId"
            android:summary="@string/msg_manageAuth"
            android:title="@string/label_userId" />

        <EditTextPreference
            android:dialogTitle="@string/label_key"
            android:inputType="textCapCharacters"
            android:key="pref_key"
            android:summary="@string/msg_manageAuth"
            android:title="@string/label_key" />

        <Preference
            android:key="import_qr"
            android:summary="@string/msg_import_qr"
            android:title="@string/label_import_qr" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_ui"
        android:title="@string/label_ui" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_autoshow_elections"
            android:summary="@string/msg_autoshow_elections"
            android:title="@string/label_autoshow_elections" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_debug"
        android:title="@string/label_debug" >

        <Preference
            android:key="clear_preferences"
            android:summary="@string/msg_clear_preferences"
            android:title="@string/label_clear_preferences" />
    </PreferenceCategory>

</PreferenceScreen>